# onepassword-keyring

./: .gitignore  README.md  pyproject.toml  setup.py  tasks.py
onepassword_keyring/: __init__.py
tests/: test_op_keyring.py
