[tool.poetry]
name = "onepassword_keyring"
version = "2.0.10"
description = "keyring wrapper for onepassword module"
authors = ["David Brown <forums@smurfless.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keyring = "^23.11.0"
onepassword = "^2.0.1"

[tool.poetry.group.dev.dependencies]
tox = "^3.27.1"
twine = "^4.0.1"
black = "^22.10.0"
poetry2setup = "^1.1.0"
invoke = "^1.7.3"
keyring = "^23.11.0"
pytest = "^7.2.0"

[[tool.poetry.source]]
name = "gitea"
url = "http://sinus.smurfless.com:3000/api/packages/smurfless1/pypi/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."keyring.backends"]
"onepassword" = "onepassword_keyring"
